<resources>
    <string name="app_name">Sign In Screen</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_your_account">Sign In Your Account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="back">Back</string>

</resources>