<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <View
        android:id="@+id/login_top_logo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:background="@drawable/ic_logo_signin_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_top_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_mid_text"
        android:layout_width="194dp"
        android:layout_height="26dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal"

        android:maxWidth="152dp"
        android:text="@string/sign_in_your_account"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome_text" />

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorPrimaryDarker"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_mid_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="353dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:background="@color/colorPrimaryDarker"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password_hint"
        android:includeFontPadding="false"
        android:inputType="textPassword"

        android:paddingLeft="12dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_edit"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/colorDanger"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />

    <TextView
        android:id="@+id/login_show_password_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/ic_show_password"
        app:layout_constraintEnd_toEndOf="@+id/login_password_edit"
        app:layout_constraintTop_toTopOf="@+id/login_password_edit" />

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginStart="278dp"
        android:layout_marginLeft="278dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:width="300dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>